# ai-fantui-logicmvp

./: .codex_analysis_prompt.txt  .codex_fix_prompt.txt  .codex_p0_fix_review.txt  .codex_p1_review.txt  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.claude/: MODEL_ROUTING.md  codex_role_business_reviewer.md  codex_role_propulsion_engineer.md
.github/: EXEC-AUDIT-SCHEMA.md
.planning/: ISSUES.md  PROJECT.md  ROADMAP.md  STATE.md  V2_OPEN_QUESTIONS.md  config.json  constitution.md  notion_control_plane.json
audit/: events.jsonl
data/: cross_domain_links.json  governance_decisions.jsonl
docs/: P43-api-contract-lock.yaml  P43-contract-proof-report.md  P43-workflow-automaton-contract.md  P43-workflow-automaton.yaml  archive_integrity.md  control_logic_guide.md  demo_presenter_talk_track.md
docs/demo/: faq.md  (+13 more)
runs/: xpassed_audit_20260425T045925Z.txt
schemas/: annotation_proposal.schema.json
scripts/: backend_switch_drill.py  c919_etras_panel_server.py  deepseek_live_full_chain.py  deepseek_ui_visual_acceptance.py  demo_rehearsal_dual_backend.py  dev-serve.sh  dress_rehearsal.py  integrated_timing_rehearsal.py  local_model_smoke.py  pitch_prewarm.py  pitch_readiness.py  verify_provenance_hashes.py  workbench_demo.py
templates/: claude_code_prompt.md.j2
tests/: conftest.py  test_adapter_freeze_banner.py  test_archive_integrity.py  test_archive_restore_sandbox.py  test_c919_chart_integration.py  test_c919_circuit_wires.py  test_c919_etras_adapter.py  test_c919_etras_frozen_v1_integration.py  test_c919_etras_frozen_v1_unit.py  test_c919_etras_workstation.py  test_canvas_interaction_artifacts.py  test_change_request_schema.py  test_chat_operate.py  test_cli.py  test_codex_persona_dispatch.py  test_content_type_whitelist.py  test_control_system_spec_schema.py  test_controller.py  test_controller_adapter.py  test_controller_truth_adapter_metadata_schema.py  test_controller_truth_metadata_schema_extension.py  test_demo.py  test_demo_fault_injection.py  test_dev_queue_brief_contract_p46_03.py  test_dev_serve_script_p46_01.py  test_document_intake.py  test_editable_change_request_handoff.py  test_editable_control_model.py  test_editable_hardware_interface_design.py  test_editable_timeline_sandbox.py  test_editable_workbench_acceptance_bundle.py  test_etras_chrome_shared.py  test_fantui_circuit_hardware_labels.py  test_fantui_circuit_wires.py  test_fantui_tick_runtime.py  test_fault_diagnosis.py  test_fault_diagnosis_schema.py  test_fault_taxonomy.py  test_fault_taxonomy_schema.py  test_generator_parity.py  (+225 more)
tickets/: .gitignore  README.md
tools/: check_authority_contract.py  close_p8_phase.py  codex_persona_dispatch.py  demo_path_smoke.py  demo_ui_handcheck.py  gsd_notion_sync.py  linear_live_issue_factory.py  notion_review_record.py  onboard_new_system_dry_run.py  run_gsd_validation_suite.py  run_mypy_gate.py  validate_control_system_spec_schema.py  validate_controller_truth_adapter_metadata_schema.py  validate_debug_json_schema.py  validate_demo_answer_schema.py  validate_fault_diagnosis_schema.py  validate_fault_taxonomy_schema.py  validate_generator_adapter.py  validate_hardware_evidence_report.py  validate_knowledge_artifact_schema.py  validate_landing_gear_adapter.py  validate_landing_gear_diagnosis.py  validate_landing_gear_full_pipeline.py  validate_landing_gear_knowledge.py  validate_landing_gear_playback.py  validate_notion_control_plane.py  validate_playback_trace_schema.py  validate_second_system_smoke_schema.py  validate_thrust_reverser_hardware_coupling.py  validate_two_system_runtime_comparison.py  validate_validation_report_schema.py  validate_validation_schema_checker_report_schema.py  validate_validation_schema_runner_report_schema.py  validate_workbench_archive_manifest_schema.py  validate_workbench_bundle_schema.py  validate_workbench_changerequest_handoff_schema.py  workbench_release_candidate_smoke.py  (+1 more)
(+876 files in other folders)
