[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "well-harness"
version = "0.1.0"
description = "Simulation harness for thrust reverser deploy control logic"
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
# Default CI lane excludes e2e; opt-in with: pytest -m e2e (or pytest -m "e2e or not e2e")
addopts = "-m 'not e2e'"
markers = [
    "e2e: opt-in end-to-end tests that boot demo_server on :8799 (run with -m e2e)",
]
